--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,10 @@ ansible/artifacts/
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
-__pycache__/
+src/__pycache__
 *.py[cod]
 *$py.class
-__init__.py
+src/__init__.py
 
 # C extensions
 *.so
@@ -191,3 +191,5 @@ terraform/engagement_2/*
 ansible/roles/c2_sliver/files/
 ansible/roles/gophish/files/*
 ansible/env
+ansible/roles/fastlorenzo.*
+src/operator_input.yml
