--- a/ansible/roles/headscale/files/nodes.yml
+++ b/ansible/roles/headscale/files/nodes.yml
@@ -14,3 +14,6 @@ ip_tailscale:
   - hostname: "phishsrv"
     ip: "100.64.0.5"
     user: "phishsrv"
+  - hostname: "vmi1484545"
+    ip: "100.64.0.6"
+    user: "siem"
